# plover-ninja

./: .gitignore  MANIFEST.in  Makefile  NEWS.md  README.md  setup.cfg
docs/source/: conf.py  index.rst  intro.rst
one-off-scripts/: insert_practice_weight.py  stress_test.py
one-off-scripts/scale_testing/: plover_ninja  results.txt  run_test.sh  scale_test.py
one-off-scripts/stress_testing/: results.txt  run_test.sh  stress_test.py
plover_dojo/: extension.py  plover_hook.py  storage.py
plover_dojo/lessons/: make_a_new_friend.py  need_for_speed.py  remember_me.py
plover_dojo/plugins/: activity_log.py  dojo_plugin.py  dojo_repl.py  dojo_test.py  stroke_efficiency_log.py
plover_dojo/test/: test_plover_dojo.py
plover_dojo/wikipedia_word_frequency/: README.txt
plover_ninja/: foo.py  plover_hook.py  storage.py
plover_ninja/lessons/: make_a_new_friend.py  need_for_speed.py  remember_me.py
plover_ninja/plugins/: activity_log.py  ninja_plugin.py  ninja_repl.py  ninja_test.py  stroke_efficiency_log.py
plover_ninja/test/: test_ninja_repl.py  test_plover_ninja.py
plover_ninja/wikipedia_word_frequency/: word_frequency_list_manager.py
