[metadata]
name = plover-ninja
version = 0.0.8
keywords = plover plover_plugin
author = Jim Ladd
author_email = jladdjr@gmail.com
description = A Plover plugin that uses stroke data to make practice suggestions and show writing statistics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jladdjr/plover-ninja
project_urls =
    Changelog = https://github.com/jladdjr/plover-ninja/blob/main/NEWS.md
    Bug Tracker = https://github.com/jladdjr/plover-ninja/issues
    Source Code = https://github.com/jladdjr/plover-ninja
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
packages =
  plover_ninja
  plover_ninja.lessons
  plover_ninja.plugins
  plover_ninja.wikipedia_word_frequency
include_package_data = True

[options.entry_points]
plover.extension =
  ninja_extension = plover_ninja.plover_hook:Main
